# traitors

./: .gitignore  LICENSE.txt  README.md  dvc.yaml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  latex.yml
docs/: index.md
docs/explanation/: fixed-order-protocol.md  game-model.md
docs/how-to/: analyse-deviation.md  analyse-results.md  compare-strategies.md  detect-traitors.md  run-sweeps.md  simulate-a-game.md  use-different-voting-strategies.md  use-migdal-recurrence.md
docs/reference/: api.md
docs/tutorials/: first-simulation.md
src/backstab/: __init__.py  _analysis.py  _detection.py  _game.py  _results.py  _strategies.py  _sweeps.py  _types.py
tests/: test_analysis.py  test_backstab.py  test_detection.py  test_game.py  test_results.py  test_strategies.py
tex/: README.md  fig_simulation.tex  fig_strategy_progression.tex  main.tex  migdal_recursion.tex  panel_diagram.tex  refs.bib  tab_paramsweep.tex
tex/deck/: main.tex
tex/deck/src/fig_strategy_comparison/: main.py
tex/deck/src/fig_tv_outcomes/: main.py
tex/src/fig_strategy_comparison/: main.py
tex/src/fig_tv_outcomes/: main.csv  main.py
