[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backstab"
version = "0.1.0"
description = "Game-theoretic analysis and Monte Carlo simulation of The Traitors"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["game-theory", "simulation", "social-deduction"]
dependencies = [
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backstab"]

[dependency-groups]
tex = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "stet>=0.0.2",
    "dvc>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "ty>=0.0.1a1",
    "zensical>=0.0.11",
    "mkdocstrings-python>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--doctest-glob='*.md' --cov=backstab --cov-report=term-missing --cov-fail-under=100"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
